# Lusterko_mvp

./: .env.example  .env.production.example  .gitignore  .mcp.json  AGENTS.md  Makefile  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_org_and_audit.py  0002_session_role_selected.py  0003_baseline_and_daily.py  0004_weekly_cognitive_ai.py  0005_risk_engine.py  0006_case_reviews.py  0007_email_password_auth.py  0008_auth_lockouts.py  0009_demo_registration.py
backend/app/: main.py
backend/app/core/: api_response.py  config.py  constants.py  cookies.py  exception_handlers.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit_log.py  auth_invite.py  auth_lockout.py  baseline_event.py  baseline_profile.py  case_review.py  case_review_note.py  comment_ai_analysis.py  daily_checkin.py  demo_registration.py  go_no_go_test.py  password_reset_token.py  reaction_test.py  risk_event.py  risk_rule_hit.py  risk_status.py  unit.py  user.py  user_identity.py  user_role.py  user_session.py  weekly_phq4.py  weekly_pss4.py
backend/app/schemas/: admin.py  auth.py  common.py  soldier.py
backend/app/services/: audit_logger.py
backend/scripts/: seed.py  seed_demo.py  seed_demo_unit.py
backend/tests/: conftest.py  factories.py  test_cookies.py  test_health.py  test_invite_email.py  test_resend_mailer.py  test_seed_demo_unit.py
backend/tests/admin/: test_admin_users.py
backend/tests/auth/: test_auth_flow.py  test_demo_registration.py  (+3 more)
(+150 files in other folders)
