[project]
name = "lusterko-backend"
version = "0.1.0"
description = "FastAPI backend foundation for the Lusterko MVP."
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.13",
  "argon2-cffi>=23.1",
  "email-validator>=2.2",
  "fastapi>=0.115",
  "httpx>=0.27",
  "itsdangerous>=2.2",
  "openai>=2.36.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

